# amalgam

./: Cargo.toml  Fyrox Notes  settings.ron
data/: scene.rgs
data/Models/: ahegao_cube.fbx  no_bitches.fbx
data/scripts/player/: settings.ron
editor/: Cargo.toml
editor/src/: main.rs
executor/: Cargo.toml
executor-android/: Cargo.toml
executor-android/src/: lib.rs
executor-wasm/: Cargo.toml
executor-wasm/src/: lib.rs
executor/src/: main.rs
game/: Cargo.toml
