
[package]
name = "executor-android"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
assets = "../data"
strip = "strip"

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO: This must be changed to 0.30 before releasing v0.30
fyrox = { path = "../../Fyrox" }
amalgam = { path = "../game" }